Fixed promo background not showing on some mobile screens

--- a/public/css/carousel.css
+++ b/public/css/carousel.css
@@ -106,7 +106,7 @@
   }
 }
 
-@media (max-width: 479px) {
+@media (max-width: 500px) {
   .video_contain{
     width: 100%;
   }
